--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
 *.json linguist-language=JSON
+*.js text eol=lf
+*.json text eol=lf
+*.css text eol=lf
+*.scss text eol=lf
+*.md text eol=lf
+*.java text eol=lf
